fix(chat): SCRUM-51 harden presigned image upload